--- a/configuration.properties
+++ b/configuration.properties
@@ -4,14 +4,24 @@
 
 browser = chrome
 
-qdUrl = https://www.qualitydemy.com
-qdGecerliUsername = anevzatcelik@login.com
-qdGecerliPassword = Nevzat152032
+aeUrl = http://automationexercise.com
 
-qdGecersizUsername = merhaba@televole.com
-qdGecersizPassword = 12345
-
-amazonUrl = https://www.amazon.com
-amazonArananUrun = Nutella
-
-youtubeUrl = https://www.youtube.com
+userName = Alper
+firstName = Alper
+lastName = Test
+companyName = Testci
+address = Test Street, Test Apartment, No:12/6
+email = test11@alper.com
+password = 123456
+selectDay = 20
+selectMonth = October
+selectYear = 2020
+country = Canada
+state = Turkey
+city = Istanbul
+zipcode = 34340
+mobileNumber = 05554442200"
+incorrectEmail = incorrect@email.com
+incorrectPassword = incorrectPassword
+contactUsMessage = Texted something etc. for automation test...
+searchingProduct = shirt
